# space_ships

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log.txt
data/: parameters.txt
data/shaders/: color.frag  color.vert
src/: CustomCallback.h  GameEngine.cpp  GameEngine.h  GameModule.cpp  GameModule.h  GameState.cpp  GameState.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  main.cpp
src/entity/: Bullet.cpp  Bullet.h  Entity.h  Meteor.cpp  Meteor.h  PhysicBody.h  Ship.cpp  Ship.h
src/rendering/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
src/utility/: Log.cpp  Log.h
